--- a/android/build.gradle
+++ b/android/build.gradle
@@ -80,6 +80,7 @@ android {
             "**/libc++_shared.so",
             "**/libfbjni.so",
             "**/libjsi.so",
+            "**/libreactnative.so",
             "**/libreactnativejni.so",
             "**/libturbomodulejsijni.so",
             "**/libreact_nativemodule_core.so",
@@ -123,12 +124,28 @@ dependencies {
   implementation "com.facebook.react:react-native:+"
 
   // Tensorflow Lite .aar (includes C API via prefabs)
-  implementation "org.tensorflow:tensorflow-lite:2.16.1"
-  extractSO("org.tensorflow:tensorflow-lite:2.16.1")
+  implementation "org.tensorflow:tensorflow-lite:2.12.0"
+  extractHeaders("org.tensorflow:tensorflow-lite:2.12.0")
+  extractSO("org.tensorflow:tensorflow-lite:2.12.0")
 
   // Tensorflow Lite GPU delegate
-  implementation "org.tensorflow:tensorflow-lite-gpu:2.16.1"
-  extractSO("org.tensorflow:tensorflow-lite-gpu:2.16.1")
+  implementation "org.tensorflow:tensorflow-lite-gpu:2.12.0"
+  extractHeaders("org.tensorflow:tensorflow-lite-gpu:2.12.0")
+  extractSO("org.tensorflow:tensorflow-lite-gpu:2.12.0")
+}
+
+task extractAARHeaders {
+  doLast {
+    configurations.extractHeaders.files.each {
+      def file = it.absoluteFile
+      def packageName = file.name.tokenize('-')[0]
+      copy {
+        from zipTree(file)
+        into "src/main/cpp/lib/$packageName/"
+        include "**/*.h"
+      }
+    }
+  }
 }
 
 task extractSOFiles {
@@ -166,5 +183,6 @@ def nativeBuildDependsOn(dependsOnTask) {
 }
 
 afterEvaluate {
+  nativeBuildDependsOn(extractAARHeaders)
   nativeBuildDependsOn(extractSOFiles)
 }
